--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-#button1{
-    border:1px solid black;
-    background-color:brown;
-    color:white;  
+.button1{  
+    background-color: brown !important;
+    color:white  !important;
 }
